legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc540/save_st/pr69245.c-5.4.0-0.out.txt
pr69245.c:9:9: error: attribute(target("fpu=vfp")) is unknown
 #pragma GCC target "fpu=vfp"
         ^
pr69245.c:12:9: error: attribute(target("fpu=neon-vfpv4")) is unknown
 #pragma GCC target "fpu=neon-vfpv4"
         ^
